# rust_server_practice

./: Cargo.toml
src/: main.rs
