[package]
name = "rust_server_practice"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
httpmock = "0.6"
redis = { version = "*"}
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }